# watsonx-clinical-nlp-ptbr

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.yaml
docs/: architecture.md
notebooks/: 01_clinical_nlp_demo.ipynb
src/: __init__.py  config.py
src/ner/: __init__.py  clinical_ner.py  entity_types.py  relation_extractor.py
src/preprocessing/: __init__.py  abbreviation_expander.py  normalizer.py  tokenizer.py
src/summarization/: __init__.py  clinical_summarizer.py  fhir_formatter.py
tests/: __init__.py  test_ner.py  test_preprocessing.py  test_relations.py  test_summarization.py
